--- a/wp-content/themes/bars_2013/style.css
+++ b/wp-content/themes/bars_2013/style.css
@@ -119,7 +119,7 @@ footer#colophon div#secondary.dlks { content: ""; display: block; height: 1px; b
 footer#colophon, footer#colophon .widget-title, footer#colophon div#secondary aside li { font-family: Arial; font-style: normal; font-size: 12px !important; }
 footer#colophon aside#recent-posts-2 span { font-family: Arial; font-size: 9px !important; font-style: italic; }
 
-footer#colophon div#secondary .widget-area { padding: 0 97px; height: 100px !important; max-width: none; width: 100%; margin: 0; left: 0; }
+footer#colophon div#secondary .widget-area { height: 100px !important; display: block; overflow: hidden; margin: 0 auto; left: 0; width: 100%; }
 footer#colophon div#secondary aside { border-left: solid 2px rgba(0, 0, 0, 0.3); margin-right: 0; margin-bottom: 0; width: 180px; left: 0 !important; position: initial !important;  }
 footer#colophon div#secondary aside li { padding: 0; }
 footer#colophon div#secondary aside#recent-posts-3 { width: 400px !important; }
@@ -130,6 +130,7 @@ footer#colophon div#secondary aside#meta-2 ul li:nth-child(2), footer#colophon d
 .site-info { overflow: hidden; text-align: center; max-width: 100%; padding-bottom: 10px;
 	background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,1) 20%, rgba(0,0,0,0) 100%);
 }
+#footer-image { background: url("images/footer-image.png"); width: 240px; height: 82px; margin: 0 auto; }
 #footer-bottom-text { margin-left: 610px; margin-top: -10px; text-align: left; font-family: 'Oswald'; letter-spacing: 1px; font-size: 0.8em; color: lightgray; }
 #footer-text { margin-left: 610px; margin-bottom: 15px; text-transform: uppercase; text-align: left; font-family: 'Oswald'; letter-spacing: 1px; font-size: 0.8em; color: lightgray; }
 
