--- a/wp-content/themes/bars2013/style.css
+++ b/wp-content/themes/bars2013/style.css
@@ -21,6 +21,7 @@ p { font-family: 'Open Sans'; font-size: 10pt; color: #CECECE; text-indent: 16pt
 .scratch { opacity: 0.4; width: 100%; height: 1px; background-image: url("images/scratch.png"); }
 .clear { clear: both; }
 .small-logo { width: 29px; height: 29px; background: url("images/loguito.png") no-repeat 0 0; }
+.overflow-hidden { overflow: hidden; }
 
 .subtle-shadow { box-shadow: 0 10px 0 -7px black; -webkit-box-shadow: 0 10px 0 -7px black; -moz-box-shadow: 0 10px 0 -7px black; }
 .arrow-right { width: 0; height: 0; border-top: 8px solid transparent; border-bottom: 8px solid transparent; border-left: 8px solid white; }
@@ -61,7 +62,7 @@ div#header-menu .nav-menu ul li.current-menu-item a { font-size: 1.1em; }
 div#header-menu .nav-menu ul li.current-menu-item { background-color: rgb(175, 0, 0); }
 
 /* Sticky menu fix */
-#header-menu { z-index: 9999; width: 100%; }
+#header-menu { z-index: 99; width: 100%; }
 
 /* Main container */
 #main { background: url("images/bgpattern2.png"); overflow: hidden; }
