--- a/wp-content/themes/bars2013/style.css
+++ b/wp-content/themes/bars2013/style.css
@@ -7,32 +7,21 @@ Author:         Andrés Mata Suárez
 Author URI:		mailto:author@bmb.com
 */
 
-@import url("../bars2013/css/auspiciantes.css");
+@import url("../bars2013/css/text.css");
+@import url("../bars2013/css/sponsors.css");
 @import url("../bars2013/css/ribbon.css");
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
-
-
-/* Text styles */
-p { text-indent: 16pt; }
-p, #page-selection .schedule-week { font-family: 'Open Sans'; font-size: 10pt; color: #CECECE; }
-.page-header { font-family: 'Open Sans'; font-size: 22pt; color: #CECECE; }
-#page-selection .schedule-day .schedule-day-info { font-family: 'Oswald'; color: #CECECE; text-shadow: 2px 2px 0.1em black; }
-#page-selection .schedule-day .schedule-day-info .schedule-day-name { font-size: 12pt; }
-#page-selection .schedule-day .schedule-day-info .schedule-day-number { font-size: 36px; }
-#page-selection .schedule-day .movie-posts { font-family: 'Oswald'; color: white; }
-#page-selection .schedule-day .movie-post .movie-post-hour { text-shadow: 1px 1px 0.1em black; font-weight: bold; }
-#page-selection .schedule-day .movie-posts .movie-post .movie-post-section { text-shadow: 1px 1px 0.1em black; font-size: 7.5pt; }
-#page-selection .schedule-day .movie-post .movie-post-title { font-size: 12pt; }
-#page-selection .schedule-day .movie-post .movie-post-info { font-size: 9pt; }
-#page-selection .schedule-day .movie-post a { text-decoration: none; color: #bbbbbb; }
-#page-selection .schedule-day .movie-post:hover a { text-decoration: none; color: white; }
 
 /* Utils */
 .scratch { opacity: 0.4; width: 100%; height: 1px; background-image: url("images/scratch.png"); }
 .clear { clear: both; }
 .small-logo { width: 29px; height: 29px; background: url("images/loguito.png") no-repeat 0 0; }
 .overflow-hidden { overflow: hidden; }
+.hidden-movie-container { display: none; }
+
+ul.checkmark { list-style: none; list-style-position:outside;  }
+ul.checkmark li:before { content: '✔'; margin-left: -1.6em; margin-right: 0.6em; }
 
 .subtle-shadow { box-shadow: 0 10px 0 -7px black; -webkit-box-shadow: 0 10px 0 -7px black; -moz-box-shadow: 0 10px 0 -7px black; }
 .arrow-right { width: 0; height: 0; border-top: 8px solid transparent; border-bottom: 8px solid transparent; border-left: 8px solid white; }
@@ -104,27 +93,30 @@ div#header-menu .nav-menu ul li.current-menu-item { background-color: rgb(175, 0
 #footer .footer-logos .fs-image { position: absolute; right: 0; top: 0; width: 112px; height: 53px; background: url("images/footer/footer_festeringslime_gray.png"); }
 #footer .footer-logos .fs-image:hover { background-image: url("images/footer/footer_festeringslime.png"); }
 
-
 /* Convocatoria (call.php -> tmpl_call) */
+#page-selection.page-content { padding-left: 0; padding-right: 0; }
 #page-call .bars-info-displayer { margin-bottom: 35px; }
 #page-call .bars-info-displayer-arrow { float: left; margin-top: 4px; margin-right: 10px; }
 #page-call .bars-info-displayer-header:hover { cursor: pointer; }
-#page-call .bars-info-displayer-header { background-color: rgba(50,50,50,0.4); border-radius: 10px 10px 0 0; padding: 8px 15px 5px 15px; overflow: hidden; }
-#page-call .bars-info-displayer-footer { background-color: rgba(50,50,50,0.4); border-radius: 0 0 10px 10px; padding: 10px; font-family: 'Oswald'; }
-#page-call .bars-info-displayer-header-title { float: left; font-size: 18px; }
+#page-call .bars-info-displayer-header { background-color: rgba(50,50,50,0.4); border-radius: 10px 10px 0 0; padding: 15px; overflow: hidden; }
+#page-call .bars-info-displayer-footer { background-color: rgba(50,50,50,0.4); border-radius: 0 0 10px 10px; padding: 10px; }
+#page-call .bars-info-displayer-header-title { float: left; }
 #page-call .bars-info-displayer-header-caption { float: right; }
 #page-call .bars-hidden-info { background-color: rgba(0,0,0,0.4); padding: 15px; }
+#page-call .bars-hidden-info > ul { list-style-type: lower-alpha; }
+#page-call .bars-hidden-info > ul > li { margin: 15px 0; }
+#page-call .bars-hidden-info .mail-address, #page-call .bars-hidden-info .shortfilm-format { margin-left: 50px; margin-top: 10px; }
+
 
 /* Programación (selection.php -> tmpl_selection) */
-#page-selection.page-content { padding-left: 0; padding-right: 0; }
 #page-selection .schedule-header { display: table; width: 100%; }
 #page-selection .schedule-header .schedule-week { display:table-cell; vertical-align:middle; text-align: left; }
 #page-selection .schedule-header .schedule-filters { display:table-cell; vertical-align:middle; text-align: right; }
 #page-selection .schedule { margin-top: 20px; }
 #page-selection .schedule .scratch { opacity: 0.1; }
 #page-selection .schedule-day { overflow: hidden; padding: 5px; }
-#page-selection .schedule-day.even { background-color: rgba(0,0,0,0.3); }
-#page-selection .schedule-day.odd { background-color: transparent; }
+#page-selection .schedule-day.odd { background-color: rgba(0,0,0,0.3); }
+#page-selection .schedule-day.even { background-color: transparent; }
 #page-selection .schedule-day .schedule-day-info { width: 90px; text-align: center; float: left; }
 #page-selection .schedule-day .movie-posts { overflow: hidden; }
 #page-selection .schedule-day .movie-post { width: 160px; }
@@ -136,6 +128,20 @@ div#header-menu .nav-menu ul li.current-menu-item { background-color: rgb(175, 0
 #page-selection .schedule-day .movie-post .movie-post-info { padding: 0 0 0 2px; }
 #page-selection .schedule-day .movie-post { position: relative; border: 1px solid rgba(255,255,255,0.1); float: left; margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; } /* filter: brightness(80%); -webkit-filter: brightness(80%); -moz-filter: brightness(80%); -o-filter: brightness(80%); -ms-filter: brightness(80%); */
 #page-selection .schedule-day .movie-post:hover { background-color: rgba(0,0,0,1); opacity: 1; } /* filter: brightness(100%); -webkit-filter: brightness(100%); -moz-filter: brightness(100%); -o-filter: brightness(100%); -ms-filter: brightness(100%); */
+
+/* Movie / Movie block info (single-movie.php / single-movieblock.php	) */
+.movie, .movieblock { background: black; width: 700px; padding: 10px; position: relative; }
+.movie .screenings-info { position: absolute; top: 0; right: 0; }
+.movie .screenings-info .section { background-color: rgba(180,10,0,0.8); padding: 5px; font-size: 18px; text-align: right; }
+.movie .screenings-info .screenings { overflow: hidden; }
+.movie .screenings-info .screenings .screenings-caption { width: 100%; float: left; background-color: rgba(180,10,0,0.8); padding-left: 5px; margin-top: 5px; }
+.movie .screenings-info .screenings .screening { float: left; padding: 5px; text-align: center; }
+.movie .screenings-info .screenings .screening .screening-daynumber { margin-top: -5px; }
+.movie .info-container .image, .movieblock .info-container .image { float: left; }
+.movie .info-container .info, .movieblock .info-container .info { overflow: hidden; }
+.movie .info-container .image, .movieblock .info-container .image { padding: 0 10px 0 0; }
+.movie .info-container .info .directors { margin-top: 10px; }
+.movie .trailer-container, .movieblock .trailer-container { width: 300px; float: right; margin: 20px 0 5px 10px; }
 
 
 
@@ -250,28 +256,7 @@ body.page-id-10 .wpcf7 input[type=text],
 body.page-id-10 .wpcf7 input[type=email],
 body.page-id-10 .wpcf7 textarea { margin-left: 60px; }
 
-
-/* Movie info */
-#movie, #movieblock { overflow: hidden; margin: 10px 10px; }
-#movie article, #movieblock article { overflow: hidden; padding: 0; }
-#movie .info-container .image, #movieblock .info-container .image { float: left; color: white; }
-#movie .info-container .info, #movieblock .info-container .info { overflow: hidden; color: white; }
-#movie .info-container .image, #movieblock .info-container .image { padding: 0 10px 0 0; }
-#movie .info-container .info .title, #movieblock .info-container .info .title { color: white; font-family: 'Oswald'; font-size: 20px; width: 260px; }
-#movie .info-container .info .year,
-#movie .info-container .info .country,
-#movie .info-container .info .links,
-#movie .info-container .info .runtime, #movieblock .info-container .info .runtime,
-#movie .info-container .info .directors,
-#movie .info-container .info .cast { color: white; font-family: 'Oswald'; font-size: 12px; }
-#movie .info-container .info .directors { padding-top: 10px; }
-#movie .synopsis, #movieblock .synopsis { padding-top: 20px; color: white; font-family: 'Oswald'; font-size: 12px; }
-#movie .trailer-container, #movieblock .trailer-container { height: 350px; }
-#movie .screenings-info { position: absolute; top: 0; right: 0; color: white; font-family: 'Oswald'; }
-#movie .screenings-info .section { background-color: rgba(180,10,0,0.8); padding: 5px; font-size: 18px; text-align: right; }
-#movie .screenings-info .screenings .screenings-caption { float: left; background-color: rgba(180,10,0,0.8); padding: 2px; font-size: 13px; text-align: right; margin-top: 5px; }
-#movie .screenings-info .screenings .screening { font-size: 12px; float: left; padding: 5px 10px 5px 10px; text-align: center; }
-#movie .screenings-info .screenings .screening .screening-daynumber { font-size: 20px; margin-top: -5px; }
+/* Movie block info */
 #movieblock .screenings-info { position: absolute; top: 0; right: 0; color: white; font-family: 'Oswald'; }
 #movieblock .screenings-info .section { background-color: rgba(180,10,0,0.8); padding: 5px; font-size: 18px; text-align: right; }
 #movieblock .screenings-info .screenings .screenings-caption { float: left; background-color: rgba(180,10,0,0.8); padding: 2px; font-size: 13px; text-align: right; margin-top: 5px; }
@@ -304,19 +289,9 @@ body.page-id-10 .wpcf7 textarea { margin-left: 60px; }
 #movieblock .movie-info-displayer .info .directors,
 #movieblock .movie-info-displayer .info .cast { color: white; font-family: 'Oswald'; font-size: 12px; }
 #movieblock .movie-info-displayer .info .directors { padding-top: 10px; }
-#movieblock .synopsis { padding-top: 20px; color: white; font-family: 'Oswald'; font-size: 12px; }
 #movieblock .trailer-container { height: 350px; }
 #movieblock .movie-info-displayer { font-family: 'Oswald'; overflow-y: auto; overflow-x: hidden; height: 400px; padding: 0 10px; }
 #movieblock .movie-info-displayer .movie:not(:first-child) { display: none; }
-
-
-/* Lightbox Plus Colorbox override */
-#cboxContent { background: rgba(0,0,0,0.8) !important; }
-#cboxLoadedContent { background: none !important; border: 1px solid rgba(255,255,255,0.1); }
-#cboxBottomCenter, #cboxClose { display: none !important; }
-/* Height & hidden overflow fix */
-#colorbox, #cboxWrapper { overflow: visible !important; }
-#cboxWrapper, #cboxContent, #cboxLoadedContent { height: auto !important; }
 
 /* Slider */
 #slider { overflow: hidden; position: relative; width: 100%; height: 344px; border: 2px solid black; }
@@ -339,6 +314,3 @@ body.page-id-10 .wpcf7 textarea { margin-left: 60px; }
 
 /* Signature */
 #signature { margin-right: 20px; float: right !important; text-transform: uppercase !important; }
-
-/* WP theater */
-.wp-theater-iframe { height: 200px !important; }
