--- a/wp-content/themes/bars2013/style.css
+++ b/wp-content/themes/bars2013/style.css
@@ -4,7 +4,7 @@ Theme URI:      http://example.com/
 Description:    Buenos Aires Rojo Sangre - Festival Internacional de Cine de Terror, Fantástico y Bizarro
 Version:        1.0
 Author:         Andrés Mata Suárez
-Author URI:		mailto:author@bmb.com
+Author URI:		mailto:author@bars.com
 */
 
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
@@ -14,6 +14,7 @@ Author URI:		mailto:author@bmb.com
 @import url("../bars2013/css/text.css");
 @import url("../bars2013/css/sponsors.css");
 @import url("../bars2013/css/ribbon.css");
+@import url("../bars2013/css/contact.css");
 
 /* Utils */
 .scratch { opacity: 0.4; width: 100%; height: 1px; background-image: url("images/scratch.png"); }
@@ -136,18 +137,6 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 .movie .info-container .info .directors { margin-top: 10px; }
 .movie .movie-synopsis { overflow: hidden; }
 .movie .trailer-container, .movieblock .trailer-container { width: 300px; float: right; margin: 20px 0 5px 10px; }
-
-/* Press & Contact page */
-#page-contact form.contact-form label, #page-contact form.contact-form input { display: block; }
-#page-contact form.contact-form .contact-form-input { margin-bottom: 20px; }
-#page-contact form.contact-form .contact-form-input .required:after { content: '*'; font-weight: bold; color: red; margin: 0 5px; }
-#page-contact .contact-form-input-name, #page-contact .contact-form-input-name input,
-#page-contact .contact-form-input-email, #page-contact .contact-form-input-email input,
-#page-contact .contact-form-input-media, #page-contact .contact-form-input-media input { width: 350px; }
-#page-contact .contact-form-input-subject, #page-contact .contact-form-input-subject input,
-#page-contact .contact-form-input-message, #page-contact .contact-form-input-message textarea { width: 100%; }
-#page-contact .contact-form-input-message textarea { height: 150px; }
-#page-contact .contact-form-input-hint { float: right; }
 
 
 
